fix main container style on small screens

--- a/geojson-script/src/app/app.component.scss
+++ b/geojson-script/src/app/app.component.scss
@@ -1,7 +1,7 @@
 .main-container {
     display: flex;
     flex-direction: column;
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
@@ -17,6 +17,7 @@
             right: 0;
             bottom: 0;
             left: 0;
+            overflow: auto;
         }
     }
 }
